--- a/index.html
+++ b/index.html
@@ -3,27 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <title>Food Analysis</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
   </head>
@@ -31,6 +16,7 @@
 
 <div class="container-fluid">
   <div class="row">
+    <!-- NAVIGATION BAR -->
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
       <div class="sidebar-sticky pt-3">
         <ul class="nav flex-column">
@@ -41,13 +27,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#">
+            <a class="nav-link active" href="#analysis">
               <span data-feather="sliders"></span>
               Food Analysis <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="#facts">
               <span data-feather="check-square"></span>
               Essential Nutrient Fact
             </a>
@@ -56,68 +42,172 @@
       </div>
     </nav>
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
-      <div class="jumbotron text-center" style="background-image: url(https://i0.wp.com/cdn-prod.medicalnewstoday.com/content/images/articles/322/322303/selection-of-chinese-food-that-may-cause-chinese-restaurant-syndrome.jpg?w=1155&h=1583); background-size: 100%; height: 350px;">
-        <h1 class="display-4" style="color: white">Food Analysis</h1>
-        <!-- Add Button with link to mars_app -->
-        <a class="btn btn-lg text-white" style="background-color:#949494; color: white" href="#" role="button">Start analyzing food </a>
-    </div>
-    </main>
-
-    <!--<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1>Food Analysis </h1>
-      </div>
-        <form class="form inline">
-        <div class="btn-toolbar mb-2 mb-md-0">
-          <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-            <span data-feather="edit-2"></span>
-            Category
-          </button>
-          <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-            <span data-feather="edit-2"></span>
-            Description
-          </button>
+        <!-- HOME  -->
+        <canvas id="canvas-image-blending">
+        <div id="slides" class="carousel slide" data-ride="carousel">
+            <ul class="carousel-indicators">
+                <li data-target="#slides" data-slide-to="0" class="active"></li>
+                <li data-target="#slides" data-slide-to="1"></li>
+                <li data-target="#slides" data-slide-to="2"></li>
+            </ul>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://i0.wp.com/cdn-prod.medicalnewstoday.com/content/images/articles/322/322303/selection-of-chinese-food-that-may-cause-chinese-restaurant-syndrome.jpg?w=1155&h=1583">
+                    <div class="carousel-caption">
+                        <h1 class="display-2">Food Analysis</h1>
+                        <h3>Everything you need to know about food nutrients. </h3>
+                        <a href="#analysis"><button type="button" class="btn btn-primary btn-lg"> Start analyzing food </button></a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="https://tse2.mm.bing.net/th?id=OIP.AlKf8Abq29QdUZ2WAOtuMgHaFS&pid=Api">
+                </div>
+                <div class="carousel-item ">
+                    <img src="https://tse4.mm.bing.net/th?id=OIP.SvQzpQXikrF8qa0cwZo2CgHaF4&pid=Api">
+                </div>
+            </div>
         </div>
-      </form>
-      <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
-      <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
-      <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
-      <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+    </canvas>
 
+        <!-- FOOD ANALYSIS -->
+        <div class="row welcome text-center">
+            <hr>
+            <div class="col-12">
+                <p class="lead"><a name="analysis">Welcome to our food analysis tool.</a> 
+                    To get started please choose a category and a description and start analyzing.</p>
+            </div>
+                <form class=form-inline>
+                    <div class="container-fluid padding">
+                            <div class="row justify-content-center">
+                            <div class="form-group col-md-4 col-md-offset-5 align-center ">
+                                <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
+                                <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                                <option selected>Choose category </option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                                </select>
+                            </div>
+                        <div class="col-auto my-1">
+                            <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
+                            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+                            <option selected>Choose description</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                            </select>
+                        </div>
+                        <div class="col-auto my-1">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                        </div>
+                    </div>
+                </form>
+                <hr class="my-4">
+        </div>
+         <!-- CATEGORY SMALLEST CALORIES -->
+        <div class="container-fluid padding">
+            <div class="row padding">
+                <div class="col-md-12 col-lg-6">
+                    <h2>Category {category]:</h2>
+                    <p>These are the results for the {category} with the lowest caloric intake.</p> 
+                </div>
+                <div class="col-md-12 col-lg-6">
+                    <img src="http://www.conceptdraw.com/How-To-Guide/picture/make-a-histogram/GRAPHS-AND-CHARTS-Histograms-Black-cherry-tree-histogram.png" class="img-fluid">
+                </div>
+            </div>
+            <hr class="my-4">
+        </div>
+
+        <!-- FAT COMPOSITION, MINERALS AND VITAMINS  -->
+        <div class="container-fluid padding">
+            <div class="row text-center padding">
+                <div class="col-xs-12 col-sm-12 col-md-4">
+                    <h3>FAT COMPOSITION FOR <br>
+                        {description} </h3>
+                    <img src="https://blog.scottlogic.com/archive/2011/09/radar_chart_kaplab.png">
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-4">
+                    <h3>MINERALS FOR <br>
+                        {description} </h3>
+                    <img src="https://blog.scottlogic.com/archive/2011/09/radar_chart_kaplab.png">
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <h3>VITAMINS FOR <br>
+                        {description} </h3>
+                    <img src="https://blog.scottlogic.com/archive/2011/09/radar_chart_kaplab.png">
+                </div>
+            </div>
+        </div>
+        <!-- TABLE  -->
       <h2>Nutrition Facts of {description}</h2>
       <div class="table-responsive">
         <table class="table table-striped table-sm table-hover">
           <tbody>
             <tr>
               <td>Kilocalories</td>
+              <td>{calories of description}</td>
             </tr>
             
             <tr>
               <td>Fat Total Lipid</td>
+              <td>{fat of description}</td>
             </tr>
             <tr>
               <td>Carbohydrate Sugar Total</td>
+              <td>{carbs of description}</td>
             </tr>
             <tr>
               <td>Cholesterol</td>
+              <td>{cholesterol of description}</td>
             </tr>
             <tr>
               <td>Fiber</td>
+              <td>{fiber of description}</td>
             </tr>
             <tr>
               <td>Protein </td>
+              <td>{protein of description}</td>
             </tr>
             <tr>
               <td>Water</td>
+              <td>{water of description}</td>
             </tr>
 
           </tbody>
         </table>
       </div>
-    </main>-->
+    </main>
+         <!-- ESSENTIAL NUTRIENTS -->
+
+      <div class="container">
+        <div class="jumbotron">
+          <h1 class="display-4"><a name="facts"></a><strong>Hey! Want to know more about essential nutrients? </strong></h1>
+          <p class="lead">Just choose the essential nutrient of your choice and we will give you a random fact. </p>
+          <hr class="my-4">
+          <button type="button" class="btn btn-outline-secondary dropdown-toggle">
+            <span data-feather="edit-2"></span>
+            Essential Nutrient
+          </button>
+          <a class="btn btn-primary" href="#" role="button">Learn more</a>
+          <p>{essential nutrient random fact} </p>
+        </div>
+      </div>
+
 
   </div>
 </div>
+<footer>
+    <div class="container-fluid padding">
+        <div class="row text-center">
+            <div class="col-12">
+                <h5> A website for Data Visualization Program 2020 </h5>
+            </div>
+        </div>
+    </div>
+</footer>
+</body>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
