--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
 
@@ -66,14 +67,14 @@
                 </div>
             </div>
         </div>
-
+        <canvas id="canvas-complex"></canvas>
 
         <!-- FOOD ANALYSIS -->
         <div class="row welcome text-center">
             <hr>
             <div class="col-12">
                 <p class="lead"><a name="analysis">Welcome to our food analysis tool.</a> 
-                    To get started please choose a category and a description and start analyzing.</p>
+                    To get started please choose a category and a description and click submit.</p>
             </div>
                 <form class=form-inline>
                     <div class="container-fluid padding">
@@ -106,6 +107,7 @@
         </div>
          <!-- CATEGORY SMALLEST CALORIES -->
         <div class="container-fluid padding">
+            <div data-aos="fade-up">
             <div class="row padding">
                 <div class="col-md-12 col-lg-6">
                     <h2>Category {category]:</h2>
@@ -115,11 +117,12 @@
                     <img src="http://www.conceptdraw.com/How-To-Guide/picture/make-a-histogram/GRAPHS-AND-CHARTS-Histograms-Black-cherry-tree-histogram.png" class="img-fluid">
                 </div>
             </div>
+        </div>
             <hr class="my-4">
         </div>
 
         <!-- FAT COMPOSITION, MINERALS AND VITAMINS  -->
-        <div class="container-fluid padding">
+        <div data-aos="fade-up"><div class="container-fluid padding">
             <div class="row text-center padding">
                 <div class="col-xs-12 col-sm-12 col-md-4">
                     <h3>FAT COMPOSITION FOR <br>
@@ -138,6 +141,7 @@
                 </div>
             </div>
         </div>
+    </div>
         <!-- TABLE  -->
       <h2>Nutrition Facts of {description}</h2>
       <div class="table-responsive">
@@ -205,6 +209,11 @@
         </div>
     </div>
 </footer>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
 </body>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -212,4 +221,5 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
         <script src="dashboard.js"></script></body>
+        <script src="granim.min.js"></script>
 </html>
